--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -37,7 +37,7 @@
         </div>
         <div style="display: flex;flex-direction: row; margin:auto">
             <div class="card" style="width: 30%;">
-                <img class="card-img-top" src="/static/person.png" alt="Card image">
+                <img class="card-img-top" src="/static/person1.png" alt="Card image">
                 <div class="card-body">
                     <p class="title">Person1</p>
                     <p>Person1 Title</p>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="card" style="width: 30%;">
-                <img class="card-img-top" src="/static/person.png" alt="Card image">
+                <img class="card-img-top" src="/static/person2.png" alt="Card image">
                 <div class="card-body">
                     <p class="title">Person2</p>
                     <p>Person2 Title</p>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="card" style="width: 30%;">
-                <img class="card-img-top" src="/static/person.png" alt="Card image">
+                <img class="card-img-top" src="/static/person3.png" alt="Card image">
                 <div class="card-body">
                     <p class="title">Person3</p>
                     <p>Person3 Title</p>
